fixed - Suppliers items alignment

--- a/src/components/suppliers/suppliers.styl
+++ b/src/components/suppliers/suppliers.styl
@@ -16,6 +16,7 @@
     margin 0 auto
     width 100%
     display flex
+    align-items center
 
   &__figure,
   &__image
